fix(search-box): align search input with submit button [finishes #159928575]

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -28,20 +28,22 @@ p {
     color: rgb(24, 23, 26);
 
 } 
+
+#join {
+    background-color: #f8f5f4;
+    color: rgb(12, 1, 1);
+    padding: 5px;
+    border-radius: 3px;
+    margin-right: 10px;
+}
+
 #login{
     background-color: green; 
     padding: 5px;
     border-radius: 3px;
 }
-#join {
-        background-color: #f8f5f4;
-        color: rgb(12, 1, 1);
-        padding: 5px;
-        border-radius: 3px;
-        margin-right: 10px;
-}
-button {
-    /* background-color: #f4511e; */
+
+button { 
     border: none;
     color: white;
     text-align: center;
@@ -51,13 +53,13 @@ button {
     opacity: 1;
     transition: 0.3s;
 
-  }
-  
-  button:hover {opacity: 0.6}
+} 
+button:hover {opacity: 0.6}
   /* Fixes submit button height problem in Firefox */
 button::-moz-focus-inner {
     border: 0;
 }
+
 .login-area {
     margin-left: 30px;
 }
@@ -69,30 +71,35 @@ button::-moz-focus-inner {
     font-size: 24px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-left:20px; 
-   }
-   #img{
-       max-width: 40px;
-
-   }
-
-.search {
-    display: grid;
-    grid-template-columns: 40% 10%;
-    justify-content: center;
-    align-content: center;
-    margin-left: 1px;
 }
-#search {
-    border-radius: 7px;
-    width: 230px;
-    height: 30px;
+#img{
+    max-width: 40px;
+
+}
+.search-box {
+    margin-left: 40px;
 }
 
-#search_button {
-    width: 88px;
-    height: 30px;
+.search-box input[type="text"] {
+    width: 200px;
+    height: 25px;
+    padding-right: 50px;
+    border: 1px solid rgb(117, 163, 255);
+    border-radius: 3px;
 }
 
+.search-box input[type="submit"] {
+    margin-left: -50px;
+    height: 25px;
+    width: 50px;
+    opacity: 1;
+    transition: 0.3s;
+    color: rgb(10, 0, 0);
+    font-style: bold;
+    border: 1px solid rgb(117, 163, 255);
+    -webkit-appearance: none;
+}
+.search-box input[type="submit"]:hover {opacity: 0.6}
 
 #home {
     text-decoration: none;
